# statistics-for-data-science

./: .gitignore  AGENTS.md  AGENTS.policy.md  CLAUDE.md  CURRICULUM.md  GLOSSARY.md  LICENSE  PEDAGOGY.md  README.md  SOURCE_COVERAGE.md  notebooks_template.ipynb  pyproject.toml
.agents/scripts/: agent-dialog.sh  check-doc-governance.rb  ci-local.sh  direct-push-repos.txt  land-pr.sh  loop-marker.sh  pingpong-relay.sh  render-codex-skill.sh  resolve-pr-worktree.sh  resource-lock.sh  run-helper.sh  run-registry.sh  wait-codex-review.sh
.claude/commands/: apply-review.md  boilerplate.md  codex-loop.md  dev-cycle.md  improve.md  pingpong.md  record-sb.md  review-and-land.md  review-loop.md  run.md  work.md
SETUP/: macos.md  vscode.md  windows.md
datasets/: README.md
datasets/health/: sleep_synth.csv
docs/: operator-decision-request-schema.md
modules/: README.md
modules/00-orientation/: 01-how-to-learn.md  README.md  reflection.md
modules/01-data-understanding/: README.md  answers.md
modules/01-descriptive-stats/: 01-when-mean-lies.ipynb  01-when-mean-lies.md  02-spread-variance-std.ipynb  02-spread-variance-std.md  03-tukey-and-visuals.ipynb  README.md  exercises.ipynb  reflection.md
modules/02-data-cleaning/: README.md  answers.md
modules/02-probability/: 01-probability-intuition.md  02-conditional-bayes.ipynb  03-independence-trap.ipynb  03-independence-trap.md
modules/03-data-transformation/: README.md  answers.md
modules/03-distributions/: 01-bernoulli-to-normal.md  02-t-chisq-f-why.ipynb  02-t-chisq-f-why.md  README.md  exercises.ipynb
(+94 files in other folders)
