[project]
name = "statistics-for-data-science"
version = "0.1.0"
description = "데이터 과학을 위한 통계학 학습 저장소 — 시나리오 기반 7-블록 학습"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "nbqa>=1.9",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F401", "E702", "B905", "I001"]
